# imgly

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
migrations/2018-06-06-103548_create_users/: up.sql
migrations/2018-06-07-151432_create_albums/: up.sql
migrations/2018-06-08-141637_create_pictures/: down.sql  up.sql
src/: main.rs  schema.rs
src/entity/: album.rs  enums.rs  mod.rs  picture.rs  thumbnail.rs  user.rs
src/helper/: time.rs
src/routing/: album.rs  mod.rs  picture.rs  root.rs  user.rs
